# xiehe

./: README.md  pyproject.toml  repo_5161250721109609.xlsx  repo_5161498331316410.xlsx
code-llm/: README.md  net_chara.py  ollama_api.py  plot_attitudes.py  pyproject.toml  requirements.txt  run.py  sim_agent.py  sim_agent_original.py  sim_model.py  sim_model_everystep  sim_model_log.py  thread_send.py
code-llm/casevo/: memory.py  model_base.py
code-llm/casevo/util/: tot_log.py
code-llm/config/0330/: readme.txt
code-llm/config/0330/retweet/55/: 1.py  2.py  3.py  6.py  repo_network_5048465357017964.json  user_id_5048465357017964.xlsx
code-llm/config/0330/retweet/根正苗红的贫农/: 1-user_infos.csv  1.py  2-user_info_with_exist.xlsx  2-user_info_with_exist_test.xlsx  2.py  3-user_info_with_exist_json.xlsx  3-user_info_with_exist_json_original.xlsx  3.py  4-Combined_Personas.json  4.py  5.py  Combined_Personas_662_new.json  Combined_Personas_new.json  Combined_Personas_new_original.json  model_1.py  repo_4913201571694562_network_new.json  repo_4913244580089675_network.json  user_id_4913244580089675.xlsx
code-llm/config/0330/retweet/邹振东/: 2-user_info_with_exist.xlsx  3-user_info_with_exist_json.xlsx  4.py  5.py  6.py  Combined_Personas_1180_new.json  Combined_Personas_new.json  repo_4914095331742409_network.json  repo_4914095331742409_network_new.json  user_id_4914095331742409.xlsx  user_infos.csv
code-llm/contents/: 0.txt
code-llm/prompt/: reflect.md  score.md  talk.md  vote.md
llm-agent-simulation/luban_sim_code/: analysis.ipynb  cache.py  config.yml  models.py  (+5 more)
(+532 files in other folders)
