
[project]
dependencies = [
    "networkx",
    "mesa==2.4.0",
    "matplotlib",
    "tqdm",
    "chromadb",
    "llama-index",
    "jinja2",
    "llama-index-llms-ollama",
    "llama-index-embeddings-huggingface",
    "wordcloud",
    "pyvis",
    "openpyxl",
    "vllm",
]
requires-python = ">=3.12"
name = "code-llm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AquariniqueMu", email = "237795826@qq.com"},
]
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
